# Rust

./: .gitignore  1.py  Cargo.toml  PERFORMANCE_ANALYSIS.md  QUICKSTART.md  README.md  START_HERE.md  TODO.md  deploy.md  design_trends_2025.md  index.html  init-project.bat  init-project.sh  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.js
.github/workflows/: deploy.yml
benches/: performance_benchmarks.rs
item/: download_images.py  images.7z  parse_products.py  products_raw_data.txt  products_structured_data.json
public/: manifest.json  robots.txt  sitemap.xml  sw.js
scripts/: analyze_performance.sh
src/: App.css  App.jsx  main.rs
src/components/: AdminPanel.jsx  CookieConsent.jsx  LanguageSwitcher.jsx  MobileNavigation.jsx  MobileProductCard.jsx  SteamAuth.jsx  UserProfile.jsx
src/components/ui/: LazyImage.jsx  LazySection.jsx  badge.jsx  button.jsx  dialog.jsx  tabs.jsx
src/hooks/: useDeviceDetection.js  useLazyImage.js  useTranslation.js
src/lib/: analytics.js  payments.js  performance.js  steamAuth.js
