[package]
name = "rust_performance_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Performance-focused dependencies
rayon = "1.10"  # Parallel processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Optional: Small allocator for reduced binary size
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[features]
default = []
jemalloc = ["tikv-jemallocator"]

# Performance optimization profiles
[profile.dev]
# Faster incremental builds
incremental = true
# Some optimizations for development
opt-level = 1

[profile.release]
# Maximum optimization for release builds
opt-level = 3
# Link-time optimization for better performance
lto = true
# Strip debug symbols for smaller binaries
strip = true
# Reduce panic overhead
panic = "abort"
# Enable more aggressive optimizations
codegen-units = 1

# Custom profile for size optimization
[profile.release-small]
inherits = "release"
opt-level = "s"  # Optimize for size
strip = true
lto = true
panic = "abort"
codegen-units = 1

# Custom profile for fast compilation
[profile.release-fast]
inherits = "release"
opt-level = 1
lto = "thin"
incremental = true

[[bench]]
name = "performance_benchmarks"
harness = false
